--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-otp-textinput": "^1.1.5",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
+    "react-native-select-dropdown": "^4.0.1",
     "react-native-svg": "^15.2.0"
   },
   "devDependencies": {
