--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-clipboard/clipboard": "^1.14.1",
     "@react-native-masked-view/masked-view": "^0.3.1",
+    "@react-native-picker/picker": "^2.7.5",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
@@ -24,7 +25,6 @@
     "react-native-otp-textinput": "^1.1.5",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
-    "react-native-select-dropdown": "^4.0.1",
     "react-native-svg": "^15.2.0"
   },
   "devDependencies": {
