--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "^2.16.0",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-material-dropdown": "^0.11.1",
     "react-native-otp-textinput": "^1.1.5",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
-    "react-native-svg": "^15.2.0"
+    "react-native-svg": "^15.2.0",
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
