--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-countdown-circle-timer": "^3.2.1",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "^2.16.0",
+    "react-native-image-picker": "^7.1.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-otp-textinput": "^1.1.5",
